
foreach(lib ${VEGA_CORE_LIBRARIES})
  add_subdirectory(src/lib${lib})
endforeach()

option(BUILD_UTILITIES "Build utility applications." ON)
if(BUILD_UTILITIES)
  if(LAPACK_FOUND AND BLAS_FOUND)
    add_subdirectory(src/util/largeModalDeformationFactory)
    add_subdirectory(src/util/reducedDynamicSolver-rt)
  endif(LAPACK_FOUND AND BLAS_FOUND)
  add_subdirectory(src/util/displayObj)
  add_subdirectory(src/util/interactiveDeformableSimulator)
  add_subdirectory(src/util/volumetricMeshUtilities)
endif(BUILD_UTILITIES)
