
foreach(lib ${VEGA_CORE_LIBRARIES})
  add_subdirectory(lib${lib})
endforeach()

option(BUILD_UTILITIES "Build utility applications." ON)
if(BUILD_UTILITIES)
  if(LAPACK_FOUND AND BLAS_FOUND)
    add_subdirectory(util/largeModalDeformationFactory)
    add_subdirectory(util/reducedDynamicSolver-rt)
  endif(LAPACK_FOUND AND BLAS_FOUND)
  add_subdirectory(util/displayObj)
  add_subdirectory(util/interactiveDeformableSimulator)
  add_subdirectory(util/volumetricMeshUtilities)
endif(BUILD_UTILITIES)
